DevOCL/src/objects/CLQ_County_Assignment__c.object
<CustomObject>
    <description>This object links a county with its default district based on the type of Organization/Program</description>
    <fields>
        <fullName>CLQ_County__c</fullName>
        <label>County</label>
        <referenceTo>CLQ_County__c</referenceTo>
        <relationshipLabel>County Assignments</relationshipLabel>
        <relationshipName>County_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CLQ_District__c</fullName>
        <label>District</label>
        <referenceTo>CLQ_District__c</referenceTo>
        <relationshipLabel>County Assignments</relationshipLabel>
        <relationshipName>County_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for County Assignment object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>CLQ_County__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <formula>CLQ_District__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District</label>
        <type>Text</type>
    </fields>
    <label>County Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>County Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>County Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>